--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 </section>
 <footer class="footer">
-  created with Deeksha
+  created by Deeksha
 </footer>
 
 <script type="text/javascript" src="karma.conf.js"></script>
